# openkit-native

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.txt  CMakeLists.txt  CMakeLists.txt.orig  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  IAction.h  Jenkinsfile  LICENSE-3rdparty.txt  README.md  appveyor.yml
openkit-c/: CMakeLists.txt
openkit-c/include/: compressor.h  memory.h
openkit-c/src/: compressor.c  compressor.cxx  curltest.c  memory.c  utf8string.c  utf8string.cxx
openkit-c/test/: CMakeLists.txt  atomic_test.c  atomic_test.cxx  condition_variable_test.c  curltest.c  curltest.cxx  mutex_test.c  rwlock_test.c  utf8stringtest.cxx
sample/: CMakeLists.txt
sample/src/: CommandLineArguments.cxx  CommandLineArguments.h  openkit-sample.cxx
samples/sample2/: CMakeLists.txt
src/: CMakeLists.txt  OpenKit.cmake
src/api/: AbstractOpenKitBuilder.cxx  AbstractOpenKitBuilder.h  AppMonOpenKitBuilder.cxx  AppMonOpenKitBuilder.h  DynatraceOpenKitBuilder.cxx  DynatraceOpenKitBuilder.h  ILogger.h  LogLevel.cxx  OpenKit.h
src/api-c/: CustomHttpRequestInterceptor.cxx  CustomHttpRequestInterceptor.h  CustomHttpResponseInterceptor.cxx  CustomHttpResponseInterceptor.h  CustomLogger.cxx  CustomLogger.h  CustomTrustManager.cxx  CustomTrustManager.h  OpenKit-c.cxx  OpenKitHttpRequest.h  OpenKitHttpResponse.h
src/caching/: BeaconCache.cxx  BeaconCache.h  BeaconCacheEntry.cxx  BeaconCacheEntry.h  BeaconCacheEvictor.cxx  BeaconCacheEvictor.h  BeaconCacheRecord.cxx  BeaconCacheRecord.h  IBeaconCache.h  IBeaconCacheEvictionStrategy.h  IObserver.h  SpaceEvictionStrategy.cxx  SpaceEvictionStrategy.h  TimeEvictionStrategy.cxx  TimeEvictionStrategy.h
src/communication/: AbstractBeaconSendingState.cxx  AbstractBeaconSendingState.h  BeaconSendingCaptureOffState.cxx  BeaconSendingCaptureOffState.h  BeaconSendingCaptureOnState.cxx  BeaconSendingCaptureOnState.h  BeaconSendingContext.cxx  BeaconSendingContext.h  BeaconSendingFlushSessionsState.cxx  BeaconSendingFlushSessionsState.h  BeaconSendingInitialState.cxx  BeaconSendingInitialState.h  BeaconSendingRequestUtil.cxx  BeaconSendingRequestUtil.h  BeaconSendingResponseUtil.cxx  BeaconSendingResponseUtil.h  BeaconSendingTerminalState.cxx  BeaconSendingTerminalState.h  BeaconSendingTimeSyncState.cxx  BeaconSendingTimeSyncState.h
src/configuration/: BeaconCacheConfiguration.cxx  BeaconCacheConfiguration.h  BeaconConfiguration.cxx  BeaconConfiguration.h  Configuration.cxx  Configuration.h  Device.cxx  Device.h  HTTPClientConfiguration.cxx  HTTPClientConfiguration.h  OpenKitType.cxx  OpenKitType.h
src/core/: Action.cxx  Action.h  ActionCommonImpl.cxx  ActionCommonImpl.h  BeaconSender.cxx  BeaconSender.h  IBeaconSender.h  ISessionWatchdog.h  ISessionWatchdogContext.h  NullAction.h  NullRootAction.h  NullSession.h  NullWebRequestTracer.h  OpenKit.cxx  OpenKit.h  RootAction.cxx  RootAction.h  Session.cxx  Session.h  SessionWatchdog.cxx  SessionWatchdog.h  SessionWatchdogContext.cxx  SessionWatchdogContext.h  SessionWrapper.cxx  SessionWrapper.h  UTF8String.cxx  UTF8String.h  WebRequestTracer.cxx  WebRequestTracer.h  WebRequestTracerBase.cxx  WebRequestTracerBase.h  WebRequestTracerStringURL.cxx  WebRequestTracerStringURL.h
src/protocol/: Beacon.cxx  Beacon.h  BeaconProtocolConstants.h  EventType.h  HTTPClient.cxx  HTTPClient.h  HTTPResponseParser.cxx  HTTPResponseParser.h  IAdditionalQueryParameters.h  IBeacon.h  IBeaconInitializer.h  IHTTPClient.h  IResponseAttributes.h  IStatusResponse.h  JsonResponseParser.cxx  JsonResponseParser.h  KeyValueResponseParser.cxx  KeyValueResponseParser.h  ProtocolConstants.h  Response.cxx  Response.h  ResponseAttribute.h  ResponseAttributes.cxx  ResponseAttributes.h  ResponseAttributesDefaults.cxx  ResponseAttributesDefaults.h  ResponseParser.cxx  ResponseParser.h  StatusResponse.cxx  StatusResponse.h  TimeSyncResponse.cxx  TimeSyncResponse.h
src/providers/: DefaultHTTPClientProvider.cxx  DefaultHTTPClientProvider.h  DefaultPRNGenerator.cxx  DefaultPRNGenerator.h  DefaultSessionIDProvider.cxx  DefaultSessionIDProvider.h  DefaultThreadIDProvider.cxx  DefaultThreadIDProvider.h  DefaultTimingProvider.cxx  DefaultTimingProvider.h  FixedPRNGenerator.cxx  FixedPRNGenerator.h  FixedSessionIDProvider.cxx  FixedSessionIDProvider.h  IHTTPClientProvider.h  IPRNGenerator.h  ISessionIDProvider.h  IThreadIDProvider.h  ITimingProvider.h
test/: CMakeLists.txt  DefaultValues.cxx  DefaultValues.h  OpenKitTests.cmake
test/api/: AbstractOpenKitBuilderTest.cxx  AppMonOpenKitBuilderTest.cxx  DynatraceOpenKitBuilderTest.cxx  LogLevelTest.cxx  MockILogger.h  MockIRootAction.h  MockIWebRequestTracer.h  MockTypes.h  OpenKitBuilderTest.cxx  Types.h
test/caching/: BeaconCacheEntryTest.cxx  BeaconCacheEvictorTest.cxx  BeaconCacheRecordTest.cxx  BeaconCacheTest.cxx  MockBeaconCache.h  MockBeaconCacheEvictionStrategy.h  MockObserver.h  SpaceEvictionStrategyTest.cxx  TimeEvictionStrategyTest.cxx
test/communication/: AbstractBeaconSendingStateTest.cxx  BeaconSendingCaptureOffStateTest.cxx  BeaconSendingCaptureOnStateTest.cxx  BeaconSendingContextTest.cxx  BeaconSendingFlushSessionStateTest.cxx  BeaconSendingInitialStateTest.cxx  BeaconSendingRequestUtilTest.cxx  BeaconSendingResponseUtilTest.cxx  BeaconSendingTerminalStateTest.cxx  BeaconSendingTimeSyncStateTest.cxx  CustomMatchers.h  MockAbstractBeaconSendingState.h  MockBeaconSendingContext.h  TestBeaconSendingState.h  curltest.cxx
test/configuration/: BeaconCacheConfigurationTest.cxx  BeaconConfigurationTest.cxx  ConfigurationTest.cxx
test/core/: ActionTest.cxx  MockAction.h  MockBeaconSender.h  MockRootAction.h  MockSession.h  MockTypes.h  MockWebRequestTracer.h  RootActionTest.cxx  SessionTest.cxx  SessionWatchdogContextTest.cxx  SessionWatchdogTest.cxx  Types.h  UTF8StringTest.cxx  WebRequestTracerBaseTest.cxx  WebRequestTracerStringURLTest.cxx  WebRequestTracerTest.cxx  WebRequestTracerURLValidityTest.cxx
test/protocol/: BeaconTest.cxx  HTTPClientTest.cxx  HTTPResponseParserTest.cxx  JsonResponseParserTest.cxx  KeyValueResponseParserTest.cxx  MockBeacon.h  MockHTTPClient.h  (+12 more)
(+446 files in other folders)
